--- a/style.css
+++ b/style.css
@@ -1,41 +1,128 @@
-body {
-    font-family: sans-serif;
-    color: #777777;
-    line-height: 26px;
-}
-.purple-color {
-    color: #8845f4;
-}
-
-.half-width{
-    width:50%;
-    float:left;
-}
-.side-img{
-    width: 50%;
-    padding-left: 25%;
-}
-.primary-btn {
-    color: white;
-    background-color: #8845f4;
-    padding: 13px 42px;
-    border-radius: 20px;
-    text-decoration: none;
+body{
+    margin: 0;
+    font-family: 'Poppins', sans-serif;
 }
 h1{
-    font-size: 2.5em;
+    font-size: 50px;
+    
+    
 }
-.container{
-    padding-left:5%;
-    display: inline-block;
+.high{
+    
+    padding-top: 30%;
+    padding-left: 20%;
 }
-.experiences {
-    padding: 30px;
-    margin: 30px;
-    background-color: rgb(238, 251, 255);
-    border-radius: 20px;
+
+h2{
+    font-size: 40px;
 }
-.experience-item {
-    padding: 10px;
-    border-left: 1px solid rgba(137, 130, 247, .2)
+p{
+    color: dimgray;
+}
+.orange-highlight{
+    color: rgb(221, 78, 114);
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    
+}
+.half-width{
+    width: 40%;
+    float: left;
+    margin-left: 5%;
+    padding-left: 2%;
+    
+}
+.half-width img{
+    width: 100%;
+    padding-top: 15%;
+}
+.top-banner{
+    background-image: url("images/header-bg.png");
+    background-repeat: no-repeat;
+}
+section{
+    height: 500px;
+    padding-bottom: 300px;
+}
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(45deg, rgb(230, 60, 173), rgb(221, 78, 114));
+    padding: 10px 35px;
+    border-radius: 5px;
+    color: white;
+    font-weight: 700;
+    
+  
+}
+.bio-filed{
+   
+    padding-top: 30%;
+    padding-left: 3%;
+}
+.bio-filed a{
+   margin-top: 3%;
+}
+.dream-area{
+    background-image: url("images/biography-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.single-experience{
+    background-image: url("images/latest-work-bg.png");
+    width: 20%;
+    float: left;
+    margin-left: 5%;
+    padding-left: 3%;
+    background-color: white;
+    
+}
+.single-experience img{
+    height: 300px;
+    width: 350px;
+    
+}
+.experience-area{
+    background-image: url("images/footer-bg.png");
+    background-repeat: no-repeat;
+    height: 50%;
+  
+}
+
+#full-stack{
+    text-align: center;
+}
+#full-stack p{
+    color: black;
+}
+.box{
+    border: 1px solid rgb(228, 94, 176);
+    width: 650px;
+    height: 150px;
+    background-image: linear-gradient(45deg, rgb(230, 60, 173), rgb(221, 78, 114));
+    border-radius: 10px;
+    color: white;
+    margin-top: 3%;
+    margin-left: 25%;
+}
+
+.box p{
+    text-align: center;
+    padding-top: 4%;
+    color: white;
+}
+.box h3{
+    text-align: center;
+    display: block;
+    padding-bottom: 5%;
+}
+.experience-area h2{
+    text-align: center;
+    padding-top: 5%;
+   
+}
+
+
+footer p{
+    text-align: center;
+    font-size: 12px;
+    padding-top: 12%;
 }
